--- a/RealNumbers.tex
+++ b/RealNumbers.tex
@@ -34,7 +34,7 @@ $$(2,3,5,7,11,13,17,19,23...)$$
 A decimal number that goes on forever and does not repeat. \footnote{$\pi$ is probably the most famous irrational number.}
 $$(3.1415926..., \sqrt 2)$$
 \subsection{Rational Number}
-The opposite of an irrational number. These number will eventually end or start repeating.
+The opposite of an irrational number. These numbers will eventually end or start repeating.
 $$(3.5,3.33333...)$$
 \subsection{Number Line}
 All real numbers can be found on the number line.
@@ -103,5 +103,100 @@ Words to be recognized when one needs to divide.
 	\item Into
 	\item Per
 \end{itemize}
+
+\section{Examples}
+\subsection{simplify}
+$$6 \times (7 - 4) \div 3 + 8 - 3 $$
+$$6 \times (3) \div 3 + 8 - 3 $$
+$$18  \div 3 + 8 - 3 $$
+$$6 \div 3 + 8 - 3 $$
+$$6 \div 8 - 3 $$
+$$14 - 3$$
+$$ 11$$
+
+\subsection{Round the Numeral}
+\begin{itemize}
+	\item 85,379
+\begin{itemize}
+	\item Nearest Thousands Place:
+	$85,000$
+	\item Nearest Tens Place:
+	$85,380$
+	
+\end{itemize}
+\end{itemize}
+
+\subsection{Expanded Notation}
+\begin{itemize}
+	\item This is the Standard Form: 85,379.
+	\item This is the Expanded Notation: 
+	
+	$$80,000$$
+	$$5,000$$
+	$$300$$
+	$$70$$
+	$$9$$
+\end{itemize}
+
+\subsection{Fractions}
+These are part of a whole.
+\begin{equation}
+	\frac {3}{5} 
+\end{equation}
+
+\subsection{Reducing Fractions}
+Common Multiple.
+\begin{equation}
+	\frac {2 \div 2}{4 \div 2} = \frac{1}{2}
+\end{equation}
+	\begin{itemize}
+		\item 2 = (2,4,6,8,10,12,...)
+		\item 4 = (4,8,12,16,20,24,...)
+	\end{itemize}
+Common Factor.
+	\begin{itemize}
+		\item 2 = 1,2
+		\item 4 = 1,2,4
+	\end{itemize}
+		2 is the Greatest Common Factor.
+\begin{equation}
+\frac {8}{24} = \frac {8 \div 8}{24 \div 8} = \frac {1}{3}
+\end{equation}
+
+\subsection{Simple Fractions}
+\begin{itemize}
+	\item Proper: Numerator is smaller than denominator. 
+	\begin{itemize}
+		\item \begin{equation}
+			\frac{3}{4} 
+		\end{equation}
+		\item \begin{equation}
+			\frac{1}{2}
+		\end{equation}
+	\end{itemize}
+	\item Improper: Numerator ia larger than denominator. 
+		\begin{itemize}
+			\item \begin{equation}
+			\frac{4}{3} 
+			\end{equation}
+			\item \begin{equation}
+			\frac{2}{1}
+			\end{equation}
+		\end{itemize}
+\end{itemize}
+
+\subsection{Complex Fractions}
+\begin{itemize}
+	\item Mixed Numbers:
+	\begin{equation}
+	3 \frac{2}{5}
+	\end{equation}
+	\item Decimals:  3.5, 5.975
+\end{itemize}
+
+
+
+
+
 
 \end{document}
