--- a/RealNumbers.tex
+++ b/RealNumbers.tex
@@ -1,10 +1,14 @@
 \documentclass[]{article}
 \usepackage{pgfplots}
 
+\usepackage[letterpaper]{geometry}
+\geometry{top=0.5in, left=0.6in, right=0.5in, bottom=0.5in}
+
+
 %opening
 \title{Real Numbers}
 \date{February 2, 2016}
-\author{}
+\author{Estefany Gebert}
 
 \begin{document}
 
@@ -194,7 +198,32 @@ Common Factor.
 	\item Decimals:  3.5, 5.975
 \end{itemize}
 
+\subsection{Dividing  Fractions}
+\begin{itemize}
+	\item Reciprocal "multiplicative inverse"
+	\begin{equation}
+		\frac{A}{B} \div \frac{N}{D}  =  \frac{A}{B} \times \frac{D}{B}		
+	\end{equation}
+\end{itemize}
 
+\subsection{Simplify:}
+\begin{equation}
+	\frac {10+7}{0} = \frac{17}{0}
+\end{equation}
+\begin{itemize}
+	\item Anything Divided by Zero will always be Zero.
+\end{itemize}
+
+\subsection{Adding Fractions}
+\begin{itemize}
+	\item \begin{equation}
+	\frac {2}{5} + \frac{3}{5} = 1
+	\end{equation}
+	\item \begin{equation}
+		\frac{5}{8} + \frac{1}{8} = \frac{6}{8} = \frac{1}{4}
+	\end{equation}
+	
+\end{itemize}
 
 
 
