--- a/RealNumbers.tex
+++ b/RealNumbers.tex
@@ -62,11 +62,44 @@ xtick={113,114,...,121}
 \end{axis}
 \end{tikzpicture}
 
-\subsection{Examples of real Numbers}
+\section{Examples: Types of Numbers}
 $$\sqrt {81} = 9 $$
 $$\sqrt {49} = 7 $$
 $$\sqrt {25} = 5 $$
 $$\sqrt {NegativeNumber} = NOT REAL$$ \footnote{Imaginary Numbers are for another lesson.}
+
+\subsection{Simplify}
+$$6 \times (7 - 4) \div 3 + 8 - 3 $$
+$$6 \times (3) \div 3 + 8 - 3 $$
+$$18  \div 3 + 8 - 3 $$
+$$6 \div 3 + 8 - 3 $$
+$$6 \div 8 - 3 $$
+$$14 - 3$$
+$$ 11$$
+
+\subsection{Round the Numeral}
+\begin{itemize}
+	\item 85,379
+	\begin{itemize}
+		\item Nearest Thousands Place:
+		$85,000$
+		\item Nearest Tens Place:
+		$85,380$
+		
+	\end{itemize}
+\end{itemize}
+
+\subsection{Expanded Notation}
+\begin{itemize}
+	\item This is the Standard Form: 85,379.
+	\item This is the Expanded Notation: 
+	
+	$$80,000$$
+	$$5,000$$
+	$$300$$
+	$$70$$
+	$$9$$
+\end{itemize}
 
 \section{Word Problems}
 \subsection{Adding}
@@ -108,41 +141,9 @@ Words to be recognized when one needs to divide.
 	\item Per
 \end{itemize}
 
-\section{Examples}
-\subsection{simplify}
-$$6 \times (7 - 4) \div 3 + 8 - 3 $$
-$$6 \times (3) \div 3 + 8 - 3 $$
-$$18  \div 3 + 8 - 3 $$
-$$6 \div 3 + 8 - 3 $$
-$$6 \div 8 - 3 $$
-$$14 - 3$$
-$$ 11$$
 
-\subsection{Round the Numeral}
-\begin{itemize}
-	\item 85,379
-\begin{itemize}
-	\item Nearest Thousands Place:
-	$85,000$
-	\item Nearest Tens Place:
-	$85,380$
-	
-\end{itemize}
-\end{itemize}
 
-\subsection{Expanded Notation}
-\begin{itemize}
-	\item This is the Standard Form: 85,379.
-	\item This is the Expanded Notation: 
-	
-	$$80,000$$
-	$$5,000$$
-	$$300$$
-	$$70$$
-	$$9$$
-\end{itemize}
-
-\subsection{Fractions}
+\section{Fractions}
 These are part of a whole.
 \begin{equation}
 	\frac {3}{5} 
@@ -204,9 +205,20 @@ Common Factor.
 	\begin{equation}
 		\frac{A}{B} \div \frac{N}{D}  =  \frac{A}{B} \times \frac{D}{B}		
 	\end{equation}
+	\item
+		$$10 \div 10 = 1$$ 
+		$$10 \div 5 = 2$$
+		$$10 \div 2 = 5$$
+		$$10 \div 1 = 10$$
+		$$10 \div \frac{1}{2} = 20$$
+		$$10 \div \frac{1}{5} = 50$$
+		$$10 \div \frac{1}{10} = 100$$
+		$$10 \div 20 = \frac{1}{2}$$
+		$$10 \div 30 = \frac{1}{3}$$
+		
 \end{itemize}
 
-\subsection{Simplify:}
+\section{Examples: Fractions}
 \begin{equation}
 	\frac {10+7}{0} = \frac{17}{0}
 \end{equation}
@@ -219,11 +231,39 @@ Common Factor.
 	\item \begin{equation}
 	\frac {2}{5} + \frac{3}{5} = 1
 	\end{equation}
-	\item \begin{equation}
-		\frac{5}{8} + \frac{1}{8} = \frac{6}{8} = \frac{1}{4}
+	\item Same Denominator.
+	\begin{equation}
+		\frac{5}{8} + \frac{1}{8} = \frac{6}{8} = \frac{3}{4}
+	\end{equation}
+	\item 
+	\begin{itemize}
+		\begin{equation}
+			\frac{8}{5} + 2 \frac{1}{5} (=INTO>)
+			\frac{8}{5} + \frac{11}{5} (=EQUALS=) 
+			\frac{19}{5}  (=OR>)  3 \frac{4}{5}
+	\end{equation}
+\end{itemize}
+	\item Different Denominator.
+	\begin{equation}
+		\frac{1}{2} + \frac{1}{5} = Find LCM 
+	\end{equation}
+	\item $2 = 2,4,6,8,10... $
+	\item $5 = 5,10,15... $
+			=10
+	\begin{equation}
+		\frac{5}{10} + \frac{2}{10} = \frac{7}{5} (Cannot be Reduced)
 	\end{equation}
 	
+
+	
 \end{itemize}
+
+\subsection{Subtracting Fractions}
+\begin{itemize}
+	\item 
+\end{itemize}
+
+
 
 
 
