--- a/RealNumbers.tex
+++ b/RealNumbers.tex
@@ -301,14 +301,14 @@ Common Factor.
 	x
 	\end{align}
 	\item Ex:
-	 \begin{align}
+	 \begin{gather*}
 	 \text{First turn mixed number into improper fraction.} \\	
 		8 \frac{1}{2} - 3 \frac{2}{5} (=INTO>)   \\
 		\text{LCM: (2=2,4,6,8,10...),(5=5,10,15...)} \\
 		\frac{17 \times 5}{2 \times 5} - \frac{17 \times 2}{5 \times 2} (=INTO>) \frac{85}{10} - \frac{34}{10} (=EQUALS>) \frac{51}{10}\\
 		\text{This answer can be turned into a Proper Fraction(Mixed Number)} \\
 		= 5 \frac{1}{10}
-	\end{align}
+	\end{gather*}
 	
 	
 	
