--- a/RealNumbers.tex
+++ b/RealNumbers.tex
@@ -6,8 +6,8 @@
 
 
 %opening
-\title{Real Numbers}
-\date{February 2, 2016}
+\title{MAT 12 CLASS NOTES}
+\date{Spring 2016}
 \author{Estefany Gebert}
 
 \begin{document}
@@ -50,6 +50,7 @@ $$(3.5,3.33333...)$$
 
 \subsection{Number Line}
 All real numbers can be found on the number line.
+
 \begin{tikzpicture}
 \begin{axis}[
 axis y line=none,
@@ -68,7 +69,6 @@ xtick={113,114,...,121}
 ]
 \end{axis}
 \end{tikzpicture}
-
 
 \section{Examples: Types of Numbers}
 $$\sqrt {81} = 9 $$
@@ -158,9 +158,9 @@ Words to be recognized when one needs to divide.
 
 \section{Fractions}
 These are part of a whole.
-\begin{equation}
+\begin{equation*}
 	\frac {3}{5} 
-\end{equation}
+\end{equation*}
 
 
 \subsection{Reducing Fractions}
@@ -187,21 +187,21 @@ Common Factor.
 \begin{itemize}
 	\item Proper: Numerator is smaller than denominator. 
 	\begin{itemize}
-		\item \begin{equation}
+		\item \begin{equation*}
 			\frac{3}{4} 
-		\end{equation}
-		\item \begin{equation}
+		\end{equation*}
+		\item \begin{equation*}
 			\frac{1}{2}
-		\end{equation}
+		\end{equation*}
 	\end{itemize}
-	\item Improper: Numerator ia larger than denominator. 
+	\item Improper: Numerator ia larger than Denominator. 
 		\begin{itemize}
-			\item \begin{equation}
+			\item \begin{equation*}
 			\frac{4}{3} 
-			\end{equation}
-			\item \begin{equation}
+			\end{equation*}
+			\item \begin{equation*}
 			\frac{2}{1}
-			\end{equation}
+			\end{equation*}
 		\end{itemize}
 \end{itemize}
 
@@ -213,10 +213,10 @@ Common Factor.
 	3 \frac{2}{5}
 	\end{equation}
 	\begin{itemize}
-		\item Turning Mixed Numbers into an improper Fraction:
-		\begin{equation}
-			W \frac{N}{D} = D \times W + N = Improper Fraction
-		\end{equation}
+		\item Turning Mixed Numbers into an Improper Fraction:
+		\begin{equation*}
+			W \frac{N}{D} = D \times W + N = \text{Improper Fraction}
+		\end{equation*}
 	\end{itemize}
 	\item Decimals:  3.5, 5.975
 \end{itemize}
@@ -225,9 +225,9 @@ Common Factor.
 \subsection{Dividing  Fractions}
 \begin{itemize}
 	\item Reciprocal "multiplicative inverse"
-	\begin{equation}
+	\begin{equation*}
 		\frac{A}{B} \div \frac{N}{D}  =  \frac{A}{B} \times \frac{D}{B}		
-	\end{equation}
+	\end{equation*}
 	\item
 	\begin{equation}
 		\begin{split}
@@ -298,9 +298,8 @@ Common Factor.
 	\item Ex: 3
 	\begin{align}
 	\frac{7}{9} - \frac{2}{3} (=INTO>) \frac{7}{9} - \frac{6}{9} = \frac{1}{9}\\
-	x
 	\end{align}
-	\item Ex:
+	\item Ex: 4
 	 \begin{gather*}
 	 \text{First turn mixed number into improper fraction.} \\	
 		8 \frac{1}{2} - 3 \frac{2}{5} (=INTO>)   \\
@@ -309,12 +308,38 @@ Common Factor.
 		\text{This answer can be turned into a Proper Fraction(Mixed Number)} \\
 		= 5 \frac{1}{10}
 	\end{gather*}
-	
-	
-	
 \end{itemize}
 
+\section{Exponents}
+\begin{itemize}
+	\item An exponent is a quantity representing the power to which a given number or expression is to be raised, usually expressed as a raised symbol beside the number or expression (e.g., 3 in 23 = 2 x 2 x 2).
+	\item \begin{equation}
+		(\frac{2}{5}) ^3 (=INTO>) ( \frac{2}{5} ) \times ( \frac{2}{5} ) \times ( \frac{2}{5} ) = \frac{8}{125} (\text{No GCF, Cannot be Reduced})
+	\end{equation}
+	\begin{itemize}
+				\item Base = $ \frac{N=2}{D=3} $
+				\item Exponent(power) = 3
+	\end{itemize}
+	\item \begin{equation}
+		(\frac{4}{9})^2 (=INTO>) (\frac{4}{9}) \times (\frac{4}{9}) = \frac{16}{81} (\text{No GCF})
+	\end{equation}
+	\item \begin{equation}
+		(\frac{2}{8})^3 (=INTO>) (\frac{2}{8}) \times (\frac{2}{8}) \times (\frac{2}{8}) = \frac{1}{64}
+	\end{equation}
+	\begin{itemize}
+		\item OR: Reduce First
+		\begin{equation}
+			(\frac{1}{4}) (=INTO>) (\frac{1}{4}) \times (\frac{1}{4}) \times (\frac{1}{4}) = \frac{1}{64}
+		\end{equation}
+	\end{itemize}
+\end{itemize}
 
+\section{Prime Factors}
+\begin{itemize}
+	\item A Prime Factor is...
+\end{itemize}
+
+\subsection{Ugh I'm Sleepy...}
 
 
 
